2002-04-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (getConstPixels): Changed offset parameter type
 	from 'unsigned int' to 'int'.
	(getPixels): Changed offset parameter type from 'unsigned int' to
 	'int'.
	(setPixels): Changed offset parameter type from 'unsigned int' to
 	'int'.

	* lib/Pixels.cpp (getConst): New method to return read-only pixels.
	(get): Offset parameter types changed from 'unsigned int' to 'int'.

2002-04-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Drawable.h (DrawableDashOffset): Change dashoffset
 	type to 'double' rather than 'unsigned int' in order to match
 	ImageMagick.

	* lib/Drawable.cpp (DrawableDashArray): Change dasharray type to
 	'double' rather than 'unsigned int' in order to match
 	ImageMagick. Previous 'unsigned int' methods remain for
 	compatability reasons.

2002-04-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableCompositeImage): Always output
 	composite images as inlined Base64.

2002-04-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableCompositeImage): If magick attribute
 	string is specified, then composite image is supplied to
 	ImageMagick as inlined Base64 rather than by MPRI reference.

	* lib/Blob.cpp (base64): Added methods to update Blob with data
 	from Base64-encoded string, or to return a Base64-encoded string
 	from Blob.  Still needs documentation.

2002-04-09  Dom Lachowicz    <cinamod@hotmail.com>

	* lib/Image.cpp (Image::ping): Added PingBlob function
	
2002-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableDashArray::operator=): Added missing
 	assignment operator (fixes a bug).
	(DrawableDashArray::DrawableDashArray): Added missing copy
 	constructor (fixes a bug).

	* lib/Image.cpp (oilPaint): Changed argument type from unsigned
 	int to double.
	(chromaBluePrimary): Changed argument type from float to double.