@@ -12,7 +12,11 @@
         (getPixels): Changed offset parameter type from 'unsigned int' to
         'int'.<BR>
         (setPixels): Changed offset parameter type from 'unsigned int' to
-        'int'.
+        'int'.<BR>
+        (cacheThreshold): Changed argument type from 'const long' to
+        'const int'.<BR>
+        (matteFloodfill): Changed offset parameter type from 'const long' to
+        'const int'.
 
   <LI> lib/Pixels.cpp (getConst): New method to return read-only pixels.
         (get): Offset parameter types changed from 'unsigned int' to 'int'.
