@@ -6,6 +6,10 @@
  	'int'.
 	(setPixels): Changed offset parameter type from 'unsigned int' to
  	'int'.
+	(cacheThreshold): Changed argument type from 'const long' to
+ 	'const int'.
+	(matteFloodfill): Changed offset parameter type from 'const long' to
+ 	'const int'.
 
 	* lib/Pixels.cpp (getConst): New method to return read-only pixels.
 	(get): Offset parameter types changed from 'unsigned int' to 'int'.
